<resources>
    <string name="app_name">Haltere-se 2.0</string>


    <string name="TITULO_ALUNO_CADASTRANDO">Cadastrar-me</string>
    <string name="TITULO_TREINADOR_CADASTRANDO">Cadastre um novo aluno</string>
    <string name="TITULO_TREINADOR_MODIFICANDO">Modifique o aluno</string>
    <string name="TITULO_TREINADOR_CRIA_TREINO">Treino Criado</string>
    <string name="TITULO_ALUNO_VISUALIZA_TREINO">Visualizar Treino</string>
    <string name="TITULO_ALUNO_VISUALIZA_EXERCICIO">Visualizar Exercicio</string>
    <string name="TITULO_ALUNO_CRIA_EXERCICIO">Criar Exercicio</string>
    <string name="TITULO_TREINADOR_CRIA_EXERCICIO">Exercicío Criado</string>


    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="addAlunoNome">Nome</string>
    <string name="alunoIdade">Idade</string>
    <string name="alunoPeso">Peso</string>
    <string name="alunoAltura">Altura</string>
    <string name="alunoGordura">Digite Aqui o Percentual de Gordura</string>
    <string name="alunoNecessidades">Digite Aqui as Necessidades Especiais</string>

    <string name="addExercicio">Adicionar Exercicio</string>
    <string name="addTreino">Adicionar Treino</string>

    <string name="exercicioNome">Digite Aqui o Nome do Exercício</string>
    <string name="exercicioTipo">Tipo do Exercício</string>
    <string name="exercicioPeso">Digite Aqui o Peso</string>
    <string name="exercicioRepeticoes">Digite Aqui o Número de Repetições</string>
    <string name="exercicioSeries">Digite Aqui o Número de Séries</string>
    <string name="exercicioDescricao">Digite Aqui a Descrição do Exercício</string>
    <string name="exercicioTempo">Digite Aqui a Duração do Exercício</string>
    <string name="exercicioTipoMusc">Muscular</string>
    <string name="exercicioTipoCard">Cardio</string>
    <string name="treinoExercicio">Exercicio</string>

    <string name="digite_senha">Digite sua senha</string>
    <string name="digite_email">Digite seu email</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="btEntrar">Entrar</string>
    <string name="btCadastro">Cadastre-se</string>

    <string name="telefoneCadastro">Telefone:</string>
    <string name="senhaCadastro">Senha:</string>
    <string name="CadastrarCadastro">Concluir Cadastro</string>

    <string name="title_activity_principal_treinador">principalTreinador</string>
    <string name="CadastrarNovoTreinador">Cadastrar Novo Treinador</string>
    <string name="AdicionarTreinador">Adicionar Treinador</string>
    <string name="NomeTreinador">Digite Aqui o Nome Do Treinador</string>
    <string name="IdadeTreinador">Digite Aqui a Idade Do Treinador</string>
    <string name="CpfTreinador">Digite Aqui O CPF Do Treinador</string>
    <string name="SenhaTreinador">Digite Aqui a Senha Do Treinador</string>
    <string name="SalararioTreinador">Digite Aqui o Salario Do Treinador</string>
    <string name="CPFAluno">CPF</string>
    <string name="OBSALuno">Observações</string>
    <string name="DataAluno">Digite A Data De Nascimento Do Aluno</string>
    <string name="CargaHoraria">Carga horária</string>
    <string name="SenhaAluno">Senha</string>
    <string name="ModificarAluno">Modificar Aluno</string>
    <string name="ModificarDadosDoAluno">Modificar Dados Do Aluno</string>
    <string name="ExcluirAluno">Excluir Aluno</string>
    <string name="AdicionarTreinoAluno">Adicionar Treino</string>
    <string name="ModificarTreinadores">Modificar Treinadores</string>
    <string name="ModificarTreinador">Modificar Treinador</string>
    <string name="Treinador">Treinador:</string>
    <string name="NomeDoTreinador">Nome Treinador</string>
    <string name="AdicionarExercicios">Adicionar Exercícios</string>
    <string name="AdicionarExercicio">Adicionar Exercício</string>
    <string name="DeletarExercicio">Deletar Exercício</string>
    <string name="BotaoBuscar">Botao de buscar</string>
    <string name="PESO">Imagem de um halter</string>
    <string name="AdicionarAluno">Adicionar Aluno</string>
    <string name="Editar">Editar</string>
    <string name="Descricao">Descrição</string>
    <string name="PesoAltura">Peso/Altura</string>
    <string name="email">email</string>
    <string name="CPF">CPF</string>
    <string name="Nome">Nome</string>
    <string name="Alunos">Alunos:</string>
    <string name="ModificarTreinoAluno">Modificar Treino Aluno</string>
    <string name="Aluno">Aluno:</string>
    <string name="AquiVaiONome">Aqui Vai O Nome Do Aluno</string>
    <string name="EditarDadosALuno">Editar Dados Aluno</string>
    <string name="EditarTreino">Editar Treino</string>
    <string name="ModifcarTreino">Modifcar Treino</string>
    <string name="BuscarTreino">Buscar Treino:</string>
    <string name="NomeDoTreino">Nome Do Treino</string>
    <string name="CriarTreino">Criar Treino</string>

    <string name="Exercicios">Exercícios</string>
    <string name="ModificarExercicios">Modificar Exercícios</string>
    <string name="BuscarExercicios">Buscar Exercícios:</string>
    <string name="NomeExercicio">Nome Exercício</string>
    <string name="DigiteEmail">E-mail</string>
    <string name="DigiteEmailTreinador">Digite Aqui o E-mail do Treinador</string>
    <string name="DigiteNomeDoTreino">Digite Aqui o Nome do Treino</string>
    <string name="DuracaoDoTreino">Digite Aqui a Duracão do Treino</string>
    <string name="DescricaoDoTreino">Digite Aqui a Descricão do Treino</string>
    <string name="DescricaoExercicioTreino">Escolha pelo menos um exercicio</string>
    <string name="AdicionarTreino">Adicionar Treino</string>
    <string name="AdicionaTreinoAluno">Adicionar Treinos ao Aluno</string>
    <string name="SeriesRepeticoes">Series/Repetições</string>
    <string name="ModificaTreino">Modificar Treinos</string>

    <string name="BuscaTreino">Buscar Treino</string>
    <string name="DuracaoTotalTreino">Duração do Treino</string>
    <string name="TodosOsTreinos">Todos Os Treinos</string>
    <string name="TodosOsSeusTreinos">Todos Os Seus Treinos!</string>
    <string name="BemVindo">Bem-Vindo!</string>
    <string name="CronogramaAluno">Seu Cronograma!</string>
    <string name="SeuTreinoDeHoje">Seu Treino De Hoje</string>
    <string name="AquiDescricaoDoTreino">Aqui Vai A Descricao Do Treino</string>
    <string name="LoginWithEmail">Login Com E-mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>