<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <EditText
        android:id="@+id/ptIdadeAluno"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/alunoIdade"
        android:inputType="number"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptNomeAluno" />

    <EditText
        android:id="@+id/ptPesoAluno"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/alunoPeso"
        android:inputType="number"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptIdadeAluno" />

    <EditText
        android:id="@+id/ptAlturaAluno"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/alunoAltura"
        android:inputType="number"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptPesoAluno" />

    <EditText
        android:id="@+id/ptDataNascimento"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/DataAluno"
        android:inputType="date"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptAlturaAluno" />

    <EditText
        android:id="@+id/ptNecessidadesAluno"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/OBSALuno"
        android:inputType="textLongMessage"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptDataNascimento" />

    <EditText
        android:id="@+id/ptCPFAluno"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/CPFAluno"
        android:inputType="number"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptNecessidadesAluno" />

    <EditText
        android:id="@+id/ptCargaHoraria"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/CargaHoraria"
        android:inputType="number"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptCPFAluno" />

    <EditText
        android:id="@+id/ptSenhaAluno"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/SenhaAluno"
        android:inputType="textPassword"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptCargaHoraria" />

    <EditText
        android:id="@+id/ptNomeAluno"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/addAlunoNome"
        android:inputType="textPersonName"
        android:shadowColor="@color/cor3"
        android:textColor="@color/cor_principal"
        android:textColorHighlight="@color/cor_principal"
        android:textColorHint="@color/cor_principal"
        android:textColorLink="@color/cor3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btAdicionarExercicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto"
        android:text="Adicionar ALUNOs"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:backgroundTint="@color/cor_principal"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/cor_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="BottomAppBar" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/bottomAppBar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dumbell" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/ModificarAluno"
        android:textColor="@color/escura"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="@+id/bottomAppBar"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>