<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">


    <CheckBox
        android:id="@+id/cbAdicionarExercicio"
        android:layout_width="64dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:checked="false"
        android:textColorHighlight="@color/cor2"
        android:textColorLink="@color/cor2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNomeExercicio"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="8"
                android:fontFamily="@font/roboto"
                android:text="@string/NomeExercicio"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textSeriesRepeticoes"
                android:layout_width="148dp"
                android:layout_height="35dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/SeriesRepeticoes"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/textDescricao"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/Descricao"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>