<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <EditText
            android:id="@+id/ptEmailAluno"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/DigiteEmail"
            android:inputType="number"
            android:textColor="@color/cor_principal"
            android:textColorHighlight="@color/cor_principal"
            android:textColorHint="@color/cor_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ptNomeAluno" />

        <EditText
            android:id="@+id/pAlturaAluno"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/alunoAltura"
            android:inputType="number"
            android:textColor="@color/cor_principal"
            android:textColorHighlight="@color/cor_principal"
            android:textColorHint="@color/cor_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ptPesoAluno" />

        <EditText
            android:id="@+id/ptPesoAluno"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/alunoPeso"
            android:inputType="number"
            android:textColor="@color/cor_principal"
            android:textColorHighlight="@color/cor_principal"
            android:textColorHint="@color/cor_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ptEmailAluno" />

        <EditText
            android:id="@+id/ptCPFAluno"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:layout_marginTop="16dp"
            android:hint="@string/CPFAluno"
            android:inputType="number"
            android:textColor="@color/cor_principal"
            android:textColorHighlight="@color/cor_principal"
            android:textColorHint="@color/cor_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ptNecessidadesAluno" />

        <EditText
            android:id="@+id/ptNecessidadesAluno"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:layout_marginTop="16dp"
            android:hint="@string/OBSALuno"
            android:inputType="textLongMessage"
            android:textColor="@color/cor_principal"
            android:textColorHighlight="@color/cor_principal"
            android:textColorHint="@color/cor_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pAlturaAluno" />

        <EditText
            android:id="@+id/ptCargaHoraria"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/CargaHoraria"
            android:inputType="number"
            android:layout_marginTop="16dp"
            android:textColor="@color/cor_principal"
            android:textColorHighlight="@color/cor_principal"
            android:textColorHint="@color/cor_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ptCPFAluno" />

        <EditText
            android:id="@+id/ptSenhaAluno"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/SenhaAluno"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:textColor="@color/cor_principal"
            android:textColorHighlight="@color/cor_principal"
            android:textColorHint="@color/cor_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ptCargaHoraria" />

        <EditText
            android:id="@+id/ptNomeAluno"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/addAlunoNome"
            android:inputType="textPersonName"
            android:shadowColor="@color/cor3"
            android:textColor="@color/cor_principal"
            android:textColorHighlight="@color/cor_principal"
            android:textColorHint="@color/cor_principal"
            android:textColorLink="@color/cor3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomAppBar"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btModificarDadosDoAluno"
            android:layout_width="246dp"
            android:layout_height="82dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ModificarDadosDoAluno"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/cor_principal"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ptSenhaAluno" />

        <Button
            android:id="@+id/btExcluirAluno"
            android:layout_width="128dp"
            android:layout_height="82dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ExcluirAluno"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/cor_principal_mais_escura"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btModificarDadosDoAluno"
            app:layout_constraintTop_toBottomOf="@+id/ptSenhaAluno" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/cor_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="BottomAppBar" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="95dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/bottomAppBar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dumbell" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Modificar Alunos"
            android:textColor="@color/escura"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/bottomAppBar"
            app:layout_constraintEnd_toEndOf="@+id/bottomAppBar"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>